<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_title_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nazar.mafia.TitleUser">
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="90dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/emblem"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:contentDescription="@string/title_0" />

    <LinearLayout
        android:layout_below="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tV_TitleUser_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleUser_title_1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:clickable="true"
            android:onClick="onTextClickTitleUser"/>

        <TextView
            android:id="@+id/tV_TitleUser_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleUser_title_2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onTextClickTitleUser"/>

        <TextView
            android:id="@+id/tV_TitleUser_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleUser_title_3"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onTextClickTitleUser"/>

        <TextView
            android:id="@+id/tV_TitleUser_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleUser_title_4"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onTextClickTitleUser"/>

        <TextView
            android:id="@+id/tV_TitleUser_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleUser_title_5"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onTextClickTitleUser"/>

        <TextView
            android:id="@+id/tV_TitleUser_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleUser_title_6"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onTextClickTitleUser"/>

        <TextView
            android:id="@+id/tV_TitleUser_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleUser_title_7"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onTextClickTitleUser"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_TitleUser_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/title_1"
        android:onClick="onTextClickTitleUser"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</RelativeLayout>
