<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_voiting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nazar.mafia.Voiting">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/title_0"
        app:srcCompat="@drawable/emblem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Voiting_title"
        android:text="@string/Voiting_title_0"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/imageView"
        android:textSize="18sp"/>

    <ListView
        android:layout_below="@+id/tv_Voiting_title"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        android:id="@+id/lv_Voiting">

    </ListView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_Voiting"
        android:layout_marginTop="-150dp"
        android:text="@string/Voiting_title_1"
        android:onClick="onTextClickVoiting"
        android:id="@+id/btn_Voiting_user"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_Voiting_user"
        android:onClick="onTextClickVoiting"
        android:text="@string/Voiting_title_2"
        android:id="@+id/btn_Voiting_none"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_Voiting_none"
        android:text="@string/Voiting_title_3"
        android:id="@+id/btn_Voiting_none_a"
        android:onClick="onTextClickVoiting"
        />

    <ImageView
        android:id="@+id/img_Voiting_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/title_1"
        android:onClick="onTextClickVoiting"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</RelativeLayout>
