<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_leader_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nazar.mafia.LeaderMain">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/title_0"
        app:srcCompat="@drawable/emblem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tV_LeaderMain_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onTextClickLeaderMain"
            android:text="@string/LeaderMain_title_1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV_LeaderMain_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="onTextClickLeaderMain"
            android:text="@string/LeaderMain_title_2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV_LeaderMain_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="onTextClickLeaderMain"
            android:text="@string/LeaderMain_title_3"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV_LeaderMain_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="onTextClickLeaderMain"
            android:text="@string/LeaderMain_title_4"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV_LeaderMain_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="onTextClickLeaderMain"
            android:text="@string/LeaderMain_title_5"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV_LeaderMain_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="onTextClickLeaderMain"
            android:text="@string/LeaderMain_title_6"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV_LeaderMain_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="onTextClickLeaderMain"
            android:text="@string/LeaderMain_title_7"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_LeaderMain_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/title_1"
        android:onClick="onTextClickLeaderMain"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</RelativeLayout>
