<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_choice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nazar.mafia.UserChoice">

    <TextView
        android:id="@+id/tV_UserChoice_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/UserChoice_title_1"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tV_UserChoice_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="cursive"
        android:text="@string/UserChoice_title_2"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:clickable="true"
        android:onClick="onTextClickUserChoice"/>

    <TextView
        android:id="@+id/tV_UserChoice_3"
        android:layout_width="wrap_content"
        android:fontFamily="cursive"
        android:layout_height="wrap_content"
        android:text="@string/UserChoice_title_3"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:clickable="true"
        android:onClick="onTextClickUserChoice"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tV_UserChoice_2"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
